--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="working_hours">Время работы:</string>
     <string name="open_hours">Вт – Пт: 10:00 – 18:00\nСб: 9:00 – 14:00</string>
     <string name="day_off">Вс, Пн - выходной</string>
-    <string name="phone">Телефон:</string>
+    <string name="phone">Телефоны:</string>
     <string name="mts_number">MTC: +375336339291</string>
     <string name="velcom_number">Velcom: +375296798750</string>
     <string name="icons8">App icons by icons8</string>
