almost ready search

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="mts_number">MTC: +375336339291</string>
     <string name="velcom_number">Velcom: +375296798750</string>
     <string name="icons8">App icons by icons8</string>
+    <string name="search">Search</string>
 </resources>
